established dependencies, created random list, defined funtion for extracting data

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2,6 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set up dependencies\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from citipy import citipy\n",
+    "import requests\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create list of 500+ random cities\n",
+    "\n",
+    "#create random coordinates\n",
+    "lat_list = np.random.uniform(-90.00, 90.00, 1500)\n",
+    "lng_list = np.random.uniform(-180.00, 180.00, 1500)\n",
+    "\n",
+    "#combine list to create coodinates\n",
+    "coords_list = list(zip(lat_list, lng_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "599"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#set up lists for finding cities using citipy\n",
+    "cities = []\n",
+    "countries = []\n",
+    "\n",
+    "for coords in coords_list:\n",
+    "    \n",
+    "    city = citipy.nearest_city(coords[0], coords[1]).city_name\n",
+    "    country = citipy.nearest_city(coords[0], coords[1]).country_code\n",
+    "    \n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "\n",
+    "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#perform API calls through OpenWeatherMap API\n",
+    "\n",
+    "#create function to extract data from API:\n",
+    "def extract_data(data):\n",
+    "    return {\n",
+    "        \"name\" : data[\"name\"],\n",
+    "        \"lat\" : data[\"coord\"][\"lat\"],\n",
+    "        \"lng\" : data[\"coord\"][\"lon\"],\n",
+    "        \"max_temp_f\" : data[\"main\"][\"temp_max\"],\n",
+    "        \"humidity\" : data[\"main\"][\"humidity\"],\n",
+    "        \"cloudiness\" : data[\"clouds\"][\"all\"],\n",
+    "        \"windspeed\" : data[\"wind\"][\"speed\"],\n",
+    "        \"country\" : data[\"sys\"][\"country\"],\n",
+    "        \"date\" : data[\"dt\"]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
