Made API requests, converted data to df

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -87,17 +87,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#request data from OpenWeatherMay API calls\n",
+    "\n",
+    "#create empty list for appending extracted data\n",
+    "city_results = []\n",
+    "\n",
+    "#create for loop to loop over random city list\n",
+    "for city in cities:\n",
+    "    #set up request and include try/except\n",
+    "    try:\n",
+    "        data = requests.get(url = \"http://api.openweathermap.org/data/2.5/weather\", params = {\n",
+    "            \"q\": city,\n",
+    "            \"appid\": weather_api_key,\n",
+    "            \"units\": \"imperial\"\n",
+    "        }).json()\n",
+    "    \n",
+    "        cities_result = extract_data(data)\n",
+    "    \n",
+    "        city_results.append(cities_result)\n",
+    "        \n",
+    "    except KeyError:\n",
+    "        pass"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>max_temp_f</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>cloudiness</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>country</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cayenne</td>\n",
+       "      <td>4.93</td>\n",
+       "      <td>-52.33</td>\n",
+       "      <td>87.80</td>\n",
+       "      <td>66</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>1600806207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mataura</td>\n",
+       "      <td>-46.19</td>\n",
+       "      <td>168.86</td>\n",
+       "      <td>53.01</td>\n",
+       "      <td>93</td>\n",
+       "      <td>60</td>\n",
+       "      <td>8.01</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1600805961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cape Town</td>\n",
+       "      <td>-33.93</td>\n",
+       "      <td>18.42</td>\n",
+       "      <td>59.00</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.87</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1600806471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Bredasdorp</td>\n",
+       "      <td>-34.53</td>\n",
+       "      <td>20.04</td>\n",
+       "      <td>48.20</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1600805714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>-23.12</td>\n",
+       "      <td>-134.97</td>\n",
+       "      <td>72.63</td>\n",
+       "      <td>75</td>\n",
+       "      <td>99</td>\n",
+       "      <td>18.63</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>1600806296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>533</th>\n",
+       "      <td>Broken Hill</td>\n",
+       "      <td>-31.95</td>\n",
+       "      <td>141.43</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1600806022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>534</th>\n",
+       "      <td>Catuday</td>\n",
+       "      <td>16.29</td>\n",
+       "      <td>119.81</td>\n",
+       "      <td>81.63</td>\n",
+       "      <td>76</td>\n",
+       "      <td>89</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>1600806024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>535</th>\n",
+       "      <td>Nogliki</td>\n",
+       "      <td>51.83</td>\n",
+       "      <td>143.17</td>\n",
+       "      <td>41.74</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1600806585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>536</th>\n",
+       "      <td>Tripoli</td>\n",
+       "      <td>32.88</td>\n",
+       "      <td>13.19</td>\n",
+       "      <td>86.95</td>\n",
+       "      <td>46</td>\n",
+       "      <td>23</td>\n",
+       "      <td>12.84</td>\n",
+       "      <td>LY</td>\n",
+       "      <td>1600806585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>537</th>\n",
+       "      <td>Ambon City</td>\n",
+       "      <td>-3.70</td>\n",
+       "      <td>128.18</td>\n",
+       "      <td>78.01</td>\n",
+       "      <td>15</td>\n",
+       "      <td>74</td>\n",
+       "      <td>7.18</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>1600806385</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>538 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name    lat     lng  max_temp_f  humidity  cloudiness  windspeed  \\\n",
+       "0        Cayenne   4.93  -52.33       87.80        66          12      12.75   \n",
+       "1        Mataura -46.19  168.86       53.01        93          60       8.01   \n",
+       "2      Cape Town -33.93   18.42       59.00        87           0      13.87   \n",
+       "3     Bredasdorp -34.53   20.04       48.20        93           0       2.24   \n",
+       "4        Rikitea -23.12 -134.97       72.63        75          99      18.63   \n",
+       "..           ...    ...     ...         ...       ...         ...        ...   \n",
+       "533  Broken Hill -31.95  141.43       50.00        71           0       8.05   \n",
+       "534      Catuday  16.29  119.81       81.63        76          89       4.50   \n",
+       "535      Nogliki  51.83  143.17       41.74        77           0       4.16   \n",
+       "536      Tripoli  32.88   13.19       86.95        46          23      12.84   \n",
+       "537   Ambon City  -3.70  128.18       78.01        15          74       7.18   \n",
+       "\n",
+       "    country        date  \n",
+       "0        GF  1600806207  \n",
+       "1        NZ  1600805961  \n",
+       "2        ZA  1600806471  \n",
+       "3        ZA  1600805714  \n",
+       "4        PF  1600806296  \n",
+       "..      ...         ...  \n",
+       "533      AU  1600806022  \n",
+       "534      PH  1600806024  \n",
+       "535      RU  1600806585  \n",
+       "536      LY  1600806585  \n",
+       "537      ID  1600806385  \n",
+       "\n",
+       "[538 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_df = pd.DataFrame(city_results)\n",
+    "city_df"
+   ]
   },
   {
    "cell_type": "code",
