adding linear regression analyses for each plot.

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1331,12 +1331,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### The northern hemisphere latitude vs max temperature plot reflects that cities closer to the equator (latitude 0) have higher max temperatures. The linear regression model appears to somewhat predicict that the further away from the equator but without great precision. This may be due to the curve of the max temperatures for cities at the equator. "
    ]
   },
   {
@@ -1406,12 +1404,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### The southern hemisphere latitude vs max temperature plot similarly shows that cities closer to the equator have higher max temperatures, while cities further from the equator have lower max temperatures. The linear regression model appears to fit the data evenly, however there does appear to be many outliers. "
    ]
   },
   {
@@ -1481,12 +1477,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### The northern hemisphere latitude plot vs humidity shows there is some positive regression but this may be skewed due to a larger cluster of cities with high humidity between 50 and 70 percent latitude. Given that the data is widely dispersed within each latitude, the model does not appear to accurately predict humidity levels. "
    ]
   },
   {
@@ -1556,12 +1550,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### The southern hemisphere latitude vs humidity does not show correlation between latitude and humidity. While it appears there are more cities with higher humidity, the data is very dispersed within all latitude points. "
    ]
   },
   {
@@ -1631,12 +1623,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### The northern hemisphere latitude vs cloudiness data is widely dispersed across both axes. The data show that the model does not accurately predict cloudiness percentage for latitude. "
    ]
   },
   {
@@ -1706,12 +1696,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### Similarly to the northern hemisphere, the southern hemishphere latitude vs. cloudiness data is widely dispersed over the plot. The linear regression model does not appear to accurately predict cloudiness across latitude in the souther hemisphere. "
    ]
   },
   {
@@ -1781,12 +1769,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#### analysis"
+    "#### The nothern hemisphere latitude vs wind speed plt shows that the majority of cities have wind speeds below 10 mph. The linear regression model appears to somewhat fit as it sits between 5 and 10 mph, however the data is widely dispered across the x axis with many cities having a wind speed under 5 mph. The model may give a general prediction but it's not entirely accurate. "
    ]
   },
   {
@@ -1856,13 +1842,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Similar to the northern hemisphere, the southern hemisphere latitude vs wind speed data is widely dispersed. The linear regression model somewhat fits but not accurately due to dispersion and outliers. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#### analysis"
-   ]
+   "source": []
   }
  ],
  "metadata": {
