added screenshot of map to images folder and added screenshot to notebook

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -2886,8 +2886,8 @@
          "accesstoken": "pk.eyJ1IjoiYWxwbGt5IiwiYSI6ImNrZmZ4b2pjNDAzOTMyc3FrY3RjdjF4dHUifQ._96P-Jk5cLkPJFYCi4Hf4Q",
          "bearing": 0,
          "center": {
-          "lat": -0.16140791931350407,
-          "lon": -10.966772619771064
+          "lat": 31.10973440850735,
+          "lon": -105.07109057428295
          },
          "domain": {
           "x": [
@@ -2900,7 +2900,7 @@
           ]
          },
          "pitch": 0,
-         "zoom": 0.9393159351428965
+         "zoom": 1.3514873865392873
         },
         "margin": {
          "t": 60
@@ -3756,6 +3756,13 @@
     "])\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![heat_map](Images/mapbox_heatmap.png)"
    ]
   },
   {
