--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### When observing the scatter plot that displays max temperatue vs. latitude for over 500 random series, the data shows that cities closer to the equator have higher max temperatures. The highest max temperatures can be found between -20 degrees latitude and 40 degrees latitude. When comparing both cloudiness and humidity vs latitude in their respective plots, the data does not show trends. Both cloudiness and humidity are widely dispersed from 0 to 100% across all latitude points. In analyzing wind speed vs. latitude, similarly there does not appear to be any significant trends or correlation. Across all latitudes, over half of the cities have a wind speed under 10 mph with the majority under 20 mph. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
